@@ -47,6 +47,6 @@ advice from friends like these:
  Lisa Xu, Daniel Fandrich, Craig A West, Alexey Borzov, Sharad Gupta,
  Peter Sylvester, Chad Monroe, Markus Moeller, Yang Tse, Scott Cantor,
  Patrick Scott, Hidemoto Nakada, Jocelyn Jaubert, Andre Guibert de Bruet,
- Kamil Dudka, Patrik Thunstrom
+ Kamil Dudka, Patrik Thunstrom, Linus Nielsen Feltzing
 
         Thanks! (and sorry if I forgot to mention someone)
